# fast-genomic-data-processing

bwa-mem2-lcp/: Makefile
deepmutect/Mutect2Cpp-master/: CMakeLists.txt  README.md  trans.pt
deepmutect/Mutect2Cpp-master/src/: ActivityProfile.cpp  ActivityProfile.h  ActivityProfileState.cpp  ActivityProfileState.h  AssemblyRegion.cpp  AssemblyRegion.h  BandPassActivityProfile.cpp  BandPassActivityProfile.h  ContigMap.cpp  ContigMap.h  IntervalUtils.cpp  IntervalUtils.h  Locatable.cpp  Locatable.h  M2ArgumentCollection.h  MathUtils.cpp  MathUtils.h  Mutect2Engine.cpp  Mutect2Engine.h  Mutect2Utils.cpp  Mutect2Utils.h  NaturalLogUtils.cpp  NaturalLogUtils.h  QualityUtils.cpp  QualityUtils.h  ReadFilter.cpp  ReadFilter.h  ReferenceCache.cpp  ReferenceCache.h  SimpleInterval.cpp  SimpleInterval.h  StringUtils.cpp  StringUtils.h  main.cpp  pileRead.h
deepmutect/Mutect2Cpp-master/src/Mutect2/: AssemblyResult.cpp  AssemblyResult.h  AssemblyResultSet.cpp  AssemblyResultSet.h  CMakeLists.txt  PreAlleleCollection.cpp  PreAlleleCollection.h  ReadThreadingAssembler.cpp  ReadThreadingAssembler.h  SomaticGenotypeEngine.cpp  SomaticGenotypeEngine.h  SomaticLikelihoodsEngine.cpp  SomaticLikelihoodsEngine.h  SubsettedLikelihoodMatrix.h
deepmutect/Mutect2Cpp-master/src/annotator/: BaseQuality.cpp  BaseQuality.h  BaseQualityRankSumTest.cpp  BaseQualityRankSumTest.h  CMakeLists.txt  Coverage.cpp  Coverage.h  DepthPerAlleleBySample.cpp  DepthPerAlleleBySample.h  DepthPerSampleHC.cpp  DepthPerSampleHC.h  FisherStrand.cpp  FisherStrand.h  FragmentLength.cpp  FragmentLength.h  GenotypeAnnotation.cpp  GenotypeAnnotation.h  InfoFieldAnnotation.cpp  InfoFieldAnnotation.h  MappingQuality.cpp  MappingQuality.h  OrientationBiasReadCounts.cpp  OrientationBiasReadCounts.h  PerAlleleAnnotation.cpp  PerAlleleAnnotation.h  ReadPosRankSumTest.cpp  ReadPosRankSumTest.h  ReadPosition.cpp  ReadPosition.h  StrandBiasBySample.cpp  StrandBiasBySample.h  StrandBiasTest.cpp  StrandBiasTest.h  TandemRepeat.cpp  TandemRepeat.h  VariantAnnotation.cpp  VariantAnnotation.h  VariantAnnotatorEngine.cpp  VariantAnnotatorEngine.h
deepmutect/Mutect2Cpp-master/src/basicshortmutpileup/: ArithmeticUtils.cpp  ArithmeticUtils.h  BetaBinomialDistribution.cpp  BetaBinomialDistribution.h  CMakeLists.txt  CombinatoricsUtils.cpp  CombinatoricsUtils.h
deepmutect/Mutect2Cpp-master/src/cache/: CMakeLists.txt  DigammaCache.cpp  DigammaCache.h  IntToDoubleFunctionCache.cpp  IntToDoubleFunctionCache.h  Log10FactorialCache.cpp  Log10FactorialCache.h
deepmutect/Mutect2Cpp-master/src/cigar/: CMakeLists.txt  Cigar.cpp  Cigar.h  CigarElement.cpp  CigarElement.h  CigarOperator.cpp  CigarOperator.h  TextCigarCodec.cpp  TextCigarCodec.h
deepmutect/Mutect2Cpp-master/src/clipping/: CMakeLists.txt  ClippingOp.cpp  ClippingOp.h  ClippingRepresentation.h  ReadClipper.cpp  ReadClipper.h
deepmutect/Mutect2Cpp-master/src/clustering/: AlleleFractionCluster.h  BetaBinomialCluster.cpp  BetaBinomialCluster.h  BetaDistributionShape.cpp  BetaDistributionShape.h  BinomialCluster.cpp  BinomialCluster.h  BinomialDistribution.cpp  BinomialDistribution.h  CMakeLists.txt  Datum.cpp  Datum.h  EStep.cpp  EStep.h  HardFilter.cpp  HardFilter.h  SequencingError.cpp  SequencingError.h  SomaticClusteringModel.cpp  SomaticClusteringModel.h
deepmutect/Mutect2Cpp-master/src/engine/: AlignmentContext.cpp  AlignmentContext.h  ReferenceContext.cpp  ReferenceContext.h
deepmutect/Mutect2Cpp-master/src/filtering/: BaseQualityFilter.cpp  BaseQualityFilter.h  CMakeLists.txt  ClusteredEventsFilter.cpp  ClusteredEventsFilter.h  DuplicatedAltReadFilter.cpp  DuplicatedAltReadFilter.h  ErrorProbabilities.cpp  ErrorProbabilities.h  ErrorType.h  FilterMutectCalls.cpp  FilterMutectCalls.h  FilteredHaplotypeFilter.cpp  FilteredHaplotypeFilter.h  FragmentLengthFilter.cpp  FragmentLengthFilter.h  GermlineFilter.cpp  GermlineFilter.h  M2FiltersArgumentCollection.cpp  M2FiltersArgumentCollection.h  MappingQualityFilter.cpp  MappingQualityFilter.h  MinAlleleFractionFilter.cpp  MinAlleleFractionFilter.h  MultiallelicFilter.cpp  MultiallelicFilter.h  Mutect2FilteringEngine.cpp  Mutect2FilteringEngine.h  Mutect2VariantFilter.cpp  Mutect2VariantFilter.h  NRatioFilter.cpp  NRatioFilter.h  NormalArtifactFilter.cpp  NormalArtifactFilter.h  PanelOfNormalsFilter.cpp  PanelOfNormalsFilter.h  PolymeraseSlippageFilter.cpp  PolymeraseSlippageFilter.h  ReadPositionFilter.cpp  ReadPositionFilter.h  (+6 more)
deepmutect/Mutect2Cpp-master/src/graph/: BaseEdge.cpp  BaseEdge.h  BaseVertex.cpp  BaseVertex.h  CMakeLists.txt  DanglingChainMergeHelper.cpp  DanglingChainMergeHelper.h  KBestHaplotype.cpp  KBestHaplotype.h  KBestHaplotypeFinder.cpp  KBestHaplotypeFinder.h  Kmer.cpp  Kmer.h  MultiDeBruijnVertex.cpp  MultiDeBruijnVertex.h  MultiSampleEdge.cpp  MultiSampleEdge.h  ReadThreadingGraph.cpp  ReadThreadingGraph.h  SeqGraph.cpp  SeqGraph.h  SeqVertex.cpp  SeqVertex.h
deepmutect/Mutect2Cpp-master/src/haplotype/: Allele.cpp  Allele.h  CMakeLists.txt  EventMap.cpp  EventMap.h  Haplotype.cpp  Haplotype.h
deepmutect/Mutect2Cpp-master/src/haplotypecaller/: AssemblyBasedCallerUtils.cpp  AssemblyBasedCallerUtils.h  AssemblyRegionTrimmer.cpp  AssemblyRegionTrimmer.h  AssemblyRegionTrimmer_Result.cpp  AssemblyRegionTrimmer_Result.h  CMakeLists.txt  CalledHaplotypes.cpp  CalledHaplotypes.h  LikelihoodEngineArgumentCollection.cpp  LikelihoodEngineArgumentCollection.h  LocationAndAlleles.cpp  LocationAndAlleles.h  MutectReadThreadingAssemblerArgumentCollection.cpp  MutectReadThreadingAssemblerArgumentCollection.h  PairHMMLikelihoodCalculationEngine.cpp  PairHMMLikelihoodCalculationEngine.h  PairHMMNativeArgumentCollection.h  ReadForPairHMM.cpp  ReadForPairHMM.h  ReadThreadingAssemblerArgumentCollection.cpp  ReadThreadingAssemblerArgumentCollection.h  ReferenceConfidenceModel.cpp  ReferenceConfidenceModel.h
deepmutect/Mutect2Cpp-master/src/model/: model.cpp  model.h
deepmutect/Mutect2Cpp-master/src/path/: AdaptiveChainPruner.cpp  AdaptiveChainPruner.h  CMakeLists.txt  ChainPruner.cpp  ChainPruner.h  Path.cpp  Path.h
(+348 files in other folders)
