aux_source_directory(. DIR_LIB_SRCS)
add_library(AnnotatorFunctions ${DIR_LIB_SRCS} InfoFieldAnnotation.cpp GenotypeAnnotation.cpp GenotypeAnnotation.h VariantAnnotatorEngine.cpp VariantAnnotatorEngine.h VariantAnnotation.cpp VariantAnnotation.h PerAlleleAnnotation.cpp PerAlleleAnnotation.h BaseQuality.cpp BaseQuality.h DepthPerAlleleBySample.cpp DepthPerAlleleBySample.h DepthPerSampleHC.cpp DepthPerSampleHC.h OrientationBiasReadCounts.cpp OrientationBiasReadCounts.h StrandBiasBySample.cpp StrandBiasBySample.h StrandBiasTest.cpp StrandBiasTest.h FisherStrand.cpp FisherStrand.h Coverage.cpp Coverage.h FragmentLength.cpp FragmentLength.h BaseQualityRankSumTest.cpp BaseQualityRankSumTest.h MappingQuality.cpp MappingQuality.h ReadPosition.cpp ReadPosition.h ReadPosRankSumTest.cpp ReadPosRankSumTest.h TandemRepeat.cpp TandemRepeat.h)