aux_source_directory(. DIR_LIB_SRCS)
add_library(SamtoolsFunctions ${DIR_LIB_SRCS} SAMSequenceDictionary.cpp SAMSequenceDictionary.h SAMRecord.cpp SAMRecord.h SAMFlag.cpp SAMFlag.h SAMUtils.cpp SAMUtils.h SAMBinaryTagAndValue.cpp SAMBinaryTagAndValue.h SAMReadGroupRecord.cpp SAMReadGroupRecord.h AbstractSAMHeaderRecord.cpp AbstractSAMHeaderRecord.h SAMProgramRecord.cpp SAMProgramRecord.h SAMFileHeader.cpp SAMFileHeader.h SAMTools_decode.cpp SAMTools_decode.h SamFileHeaderMerger.cpp SamFileHeaderMerger.h HeaderRecordFactory.cpp HeaderRecordFactory.h HeaderRecordAndFileHeader.cpp HeaderRecordAndFileHeader.h)