aux_source_directory(. DIR_LIB_SRCS)
add_library(UtilsFunctions ${DIR_LIB_SRCS} PeUtils.cpp PeUtils.h ReadPileup.cpp ReadPileup.h pairhmm/VectorLoglessPairHMM.cpp pairhmm/VectorLoglessPairHMM.h pairhmm/HaplotypeDataHolder.h pairhmm/HaplotypeDataHolder.cpp pairhmm/PairHMM.cpp pairhmm/PairHMM.h genotyper/AlleleLikelihoods.cpp genotyper/AlleleLikelihoods.h variant/GATKVariantContextUtils.cpp variant/GATKVariantContextUtils.h Utils.cpp Utils.h fragments/FragmentCollection.cpp fragments/FragmentCollection.h fragments/FragmentUtils.cpp fragments/FragmentUtils.h Dirichlet.cpp Dirichlet.h pairhmm/PairHMMConcurrentControl.cpp pairhmm/PairHMMConcurrentControl.h ../haplotypecaller/ReadForPairHMM.cpp ../haplotypecaller/ReadForPairHMM.h)